# drf_project

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: auth.json  payment.json  user.json
materials/: apps.py  models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_author_lesson_author.py  0003_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_alter_payment_user.py  0005_payment_link_payment_session_id.py
