[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
django-phonenumber-field = "^7.3.0"
django-phonenumbers = "^1.0.1"
pillow = "^10.3.0"
django = "^5.0.6"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.5.3"
drf-yasg = "^1.21.7"
requests = "^2.32.3"
stripe = "^9.9.0"
celery = "^5.4.0"
eventlet = "^0.36.1"
redis = "^5.0.5"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
